# Coesius_Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  auto_release.sh  replace_includes.sh
.scripts/: auto_release.sh  clean_header.sh  replace_includes.sh  replace_includes_dev.sh  replace_includes_release.sh
AUTO_RELEASES/: Sia_Lib_AUTO-0.00.01.hpp  Sia_Lib_AUTO-0.00.03.hpp  Sia_Lib_AUTO-0.00.04.hpp  Sia_Lib_AUTO-0.00.07.hpp  Sia_Lib_AUTO-0.00.09.hpp
MINI_DEV_RELEASES/: Coesius_Lib_MINI_DEV-v000001.hpp
Sia/: Sia_common.cpp  Sia_common.hpp  Sia_compile_random.hpp  Sia_general.ipp  Sia_input.ipp  Sia_input_layer.cpp  Sia_layer  Sia_layer.cpp  Sia_network.cpp  Sia_network.hpp  Sia_network.ipp  Sia_output_layer.cpp
coesius/coesius/: coesius_lib.hpp
coesius/dev/: general.ipp  input.ipp  internal.ipp  network.hpp  network.ipp
dev/: main.cpp
development/: main.cpp
myIncludes/: exprtk.hpp
sia/dev/: network.hpp
src/: main.cpp
tests/: main.cpp  test_1.cpp  test_2.cpp
